Changes required for ds-java to move to java17 and also depend on ds-Memory 4.0.0, which is built around FFM/Panama.